# OllamaRank

./: README.md  pyproject.toml
docs/: PLAN.md
src/: app.py
src/components/: blind_comparison_tab.py  custom_widgets.py  leaderboard_tab.py  settings_tab.py
src/core/: database.py  models.py  ollama_service.py  vote_outcome.py
